# Web-Researcher-Agent

./: README.md  pyproject.toml  requirements.txt
documentation/: docs.md
src/: crew.py  crew_tests.py  web_research_app.py
src/config/: agents.yaml  tasks.yaml
